# pycolleague

./: .bumpversion.cfg  .gitignore  Pipfile  Pipfile.OLD  Pipfile.lock.OLD  README.md  pyproject.toml  setup-SAV.py  setup.py
pycolleague/: __init__.py  config.py  pycolleague.py
