[build-system]
requires = ["setuptools", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[project]
name = "pycolleague"
version = "0.6.2"
dependencies = [
    "connectorx",
    "duckdb",
    "pandas",
    "polars",
    "pydantic",
    "pydantic_settings",
    "pyodbc",
    "python-dotenv",
    "pyyaml",
    "sqlalchemy",
]
description = "A module for accessing data exported from Colleague SIS. Includes the ability to work with data exported as CSVs or data imported into the SAS Data Mart or CCDW database"
readme = "README.md"
authors = [{ name = "David Onder", email = "donder@haywood.edu" }]
license = {file = "LICENSE"}